use parameter configuration

--- a/glaciersat/params.cfg
+++ b/glaciersat/params.cfg
@@ -1,9 +1,10 @@
 
 # DOWNLOAD OPTIONS
-landsat_tiles_ch = ['194/028', '195/028', '196/028', '193/027', '193/028', '195/027', '194/027']
-sentinel_tiles_ch = ['32TMS', '32TNS', '32TLS']
+landsat8_tiles_ch = ''' '194/028', '195/028', '196/028', '193/027', '193/028',
+                    '195/027', '194/027' '''
+sentinel2_tiles_ch = '32TMS', '32TNS', '32TLS'
 # cloud cover percentage: range of interest (tuple of 0-100)
-cloudcover = 0, 85
+cloudcover_range = 0, 85
 
 
 # MASKING OPTIONS
