--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,8 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs/_static
+docs/_templates
 
 # PyCharm stuff:
 .idea/
@@ -108,3 +110,5 @@ venv.bak/
 
 # credentials
 .credentials
+
+glaciersat/version.py
