--- a/glaciersat/params.cfg
+++ b/glaciersat/params.cfg
@@ -9,7 +9,7 @@ cloudcover_range = 0, 85
 
 # MASKING OPTIONS
 # Cloud mask probability threshold below pixel is still used (0-1)
-cloud_prob_tresh = 0.
+cloud_prob_thresh = 0.
 # maximum allowed cloud cover ratio for one glacier entity and scene (0-1)
 max_cloud_cover_ratio = 0.2
 
