--- a/ci/requirements-py39-all-rc.yml
+++ b/ci/requirements-py39-all-rc.yml
@@ -1,8 +1,9 @@
 name: test_env
 channels:
+  - conda-forge/label/rc
   - conda-forge
 dependencies:
-  - python=3.7
+  - python=3.9
   - sentinelsat
   - xarray>=0.16
   - netCDF4
@@ -20,11 +21,11 @@ dependencies:
   - scikit-image
   - pip
   - pip:
-      - git+https://github.com/pydata/xarray.git
       - salem
       - sentinelsat
       - schedule
       - coveralls
+      - pytest
       - pytest-cov
       - pytest-mpl
       - motionless
