--- a/ci/requirements-py39-all.yml
+++ b/ci/requirements-py39-all.yml
@@ -1,9 +1,8 @@
 name: test_env
 channels:
-  - conda-forge/label/rc
   - conda-forge
 dependencies:
-  - python=3.7
+  - python=3.9
   - sentinelsat
   - xarray>=0.16
   - netCDF4
@@ -19,6 +18,7 @@ dependencies:
   - matplotlib
   - configobj
   - scikit-image
+  - pytest
   - pip
   - pip:
       - salem
@@ -29,3 +29,5 @@ dependencies:
       - pytest-mpl
       - motionless
       - descartes
+
+
