add cloud params

--- a/glaciersat/params.cfg
+++ b/glaciersat/params.cfg
@@ -13,6 +13,20 @@ cloud_prob_thresh = 0.
 # maximum allowed cloud cover ratio for one glacier entity and scene (0-1)
 max_cloud_cover_ratio = 0.2
 
+# CLOUD SHADOW PROCESSING
+# How high can the clouds potentially be for the shadow projection? (m)
+cloud_heights_range = 0., 1000.
+# at which interval shall we check for clouds?
+cloud_heights_interval = 20.
+# threshold to mask out dark pixels (sum of infrared channels)
+# a smaller value masks out more
+ir_sum_thresh = 0.45
+# number of pixels to erode and afterwards dilate the mask
+# todo: this should be in metric units, actually /resolutions are different per glacier!)
+# todo: use different values for cloud mask and shadow mask?
+erode_n_pixels = 10
+dilate_n_pixels = 15
+
 
 # NAEGELI SNOW MAPPING
 # albedo thresholds for surface type evaluation
