make operational possible

--- a/glaciersat/params.cfg
+++ b/glaciersat/params.cfg
@@ -1,8 +1,10 @@
+# STORAGE PATHS
+sentinel_download_path =
 
 # DOWNLOAD OPTIONS
 landsat8_tiles_ch = ''' '194/028', '195/028', '196/028', '193/027', '193/028',
                     '195/027', '194/027' '''
-sentinel2_tiles_ch = '32TMS', '32TNS', '32TLS'
+sentinel2_tiles_ch = '32TMS', '32TNS', '32TLS', '32TLR', '32TMR', '32TLT', '32TNR', '32TPR', '32TNS', '32TPS', '32TNT', '32TPT', '31TGL', '31TGM', '32TLS', '31TFN', '31TGN', '32TLT', '31UFP', '31UGP', '32ULU', '32TLR', '32TMR', '32TNR', '32TPR', '32TMS', '32TMT'
 # cloud cover percentage: range of interest (tuple of 0-100)
 cloudcover_range = 0, 85
 
