--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,7 +5,7 @@ sphinx:
    configuration: docs/conf.py
 
 build:
-   os: "ubuntu-20.04"
+   image: latest
    tools:
      python: "mambaforge-4.10"
 
