try mamba again

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,7 +5,9 @@ sphinx:
    configuration: docs/conf.py
 
 build:
-  image: latest
+  os: ubuntu-20.04
+  tools:
+    python: mambaforge-4.10
 
 conda:
     environment: ci/requirements-py39-all.yml
