--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,37 +10,32 @@ on:
 
 jobs:
   test:
-    name: ${{ matrix.test-env }}
+    name: ${{ matrix.python-version }}
     strategy:
       fail-fast: false
       matrix:
-        test-env:
-          - py39-all
-          - py39-xarray-dev
-          - py39-all-rc
-        use-mpl:
-          - "--mpl"
-        os: [ubuntu-latest, windows-latest]
+        python-version: ["3.8", "3.9", "3.10"]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
         shell: bash -leo pipefail {0}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Conda
-        uses: conda-incubator/setup-miniconda@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
-          environment-file: ci/requirements-${{ matrix.test-env }}.yml
-          activate-environment: test_env
-          auto-activate-base: false
-          auto-update-conda: true
-      - name: Install Self
-        run: pip install -e .
+          python-version: ${{ matrix.python-version }}
+      - name: Install poetry
+        run: | 
+          pip install -U poetry
+        shell: bash
+      - run: poetry --version
+      - name: Install deps
+        run: poetry install --with dev
       - name: Test
         run: |
           coverage erase
-          coverage run --source=./glaciersat --parallel-mode --module pytest ${{ matrix.use-mpl }} --verbose glaciersat
+          coverage run --source=./glaciersat --parallel-mode --module pytest --verbose glaciersat
           coverage combine
           coverage xml
           coverage report --skip-covered
@@ -64,5 +59,5 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         COVERALLS_SERVICE_NAME: github
       run: |
-        pip3 install --upgrade coveralls &&
-        coveralls --finish
+        pip3 install --upgrade coveralls==3.2.0 &&
+        coveralls --finish  
