--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -36,11 +36,11 @@ jobs:
              source $(poetry env info --path)/bin/activate
       - name: Test
         run: |
-          poetry run coverage erase
-          poetry run coverage run --source=./glaciersat --parallel-mode --module pytest --verbose glaciersat
-          poetry run coverage combine
-          poetry run coverage xml
-          poetry run coverage report --skip-covered
+          python -m coverage erase
+          python -m coverage run --source=./glaciersat --parallel-mode --module pytest --verbose glaciersat
+          python -m coverage combine
+          python -m coverage xml
+          python -m coverage report --skip-covered
         env:
           MPLBACKEND: agg
           COVERAGE_RCFILE: ${{ github.workspace }}/.coveragerc
