--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -33,13 +33,15 @@ jobs:
         run: |
              poetry update python=${{ matrix.python-version }}
              poetry install --with=dev
-      - name: Activate environment Unix and run coverage
-        if: (${{ matrix.os }} == "ubuntu-latest") || (${{ matrix.os }} == "macos-latest")
-        run: source $(poetry env info --path)/bin/activate
-             poetry run coverage
-      - name: Activate environment Windows and run coverage
-        if: ${{ matrix.os }} == "windows-latest"
-        run: source $(poetry env info --path)/Scripts/activate
+      - name: Activate environment and run coverage
+        run: |
+             if [ "$RUNNER_OS" == "Linux" ]; then
+              source $(poetry env info --path)/bin/activate
+             if [ "$RUNNER_OS" == "macOS" ]; then
+              source $(poetry env info --path)/bin/activate
+             elif [ "$RUNNER_OS" == "Windows" ]; then
+              source $(poetry env info --path)/Scripts/activate
+             fi
              poetry run coverage
       - name: Test
         run: |
