--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,17 +7,21 @@ sphinx:
 build:
   os: ubuntu-20.04
   tools:
-    python: mambaforge-4.10
+    python: "3.10"
+  jobs:
+    post_create_environment:
+      # Install poetry
+      # https://python-poetry.org/docs/#installing-manually
+      - pip install poetry
+      # Tell poetry to not use a virtual environment
+      - poetry config virtualenvs.create false
+    post_install:
+      # Install dependencies with 'docs' dependency group
+      # https://python-poetry.org/docs/managing-dependencies/#dependency-groups
+      - poetry install --with docs
 
-conda:
-    environment: ci/requirements-py39-all.yml
+sphinx:
+  configuration: docs/conf.py
 
 sphinx:
   fail_on_warning: false
-
-python:
-  # Install our python package before building the docs
-  install:
-    - method: pip
-      path: .
-formats: []
