--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,11 @@ schedule = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
-coverage = "^7.2.1"
+
+
+[tool.poetry.group.docs.dependencies]
+Sphinx = "^6.1.3"
+pydata-sphinx-theme = "^0.13.0"
 
 [build-system]
 requires = ["poetry-core"]
