--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ schedule = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
+coverage = "^7.2.1"
 
 
 [tool.poetry.group.docs.dependencies]
